# lfr-rust-template

./: .gitignore  Cargo.toml  README.md  scoop.json.example
.gemini/prompts/: setup-new-tool.md  update-distribution-channels.md  update-homebrew-tap.md
.github/workflows/: release.yml
src/: main.rs
src/core/: env.rs  mod.rs
src/utils/: mod.rs
